# Internship-Pipeline

./: .env.example  .gitignore  LICENSE  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt  seen_internships.json
src/: __init__.py
src/config/: __init__.py  settings.py
src/llm/: __init__.py  ollama_client.py
src/scoring/: scorer.py
src/scrapers/: __init__.py  base.py  hackerearth.py  indeed.py  internshala.py  linkedin.py  naukri.py  unstop.py  wellfound.py
src/storage/: __init__.py  file_exporter.py  pdf_generator.py  seen_manager.py
src/utils/: hr_finder.py  logger.py  mailer.py  resume_reader.py
tests/: test_pipeline.py
