[project]
name = "aiii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.14.3",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
]
